photo not showing fixed

--- a/portfolio/css/header.css
+++ b/portfolio/css/header.css
@@ -5,7 +5,7 @@ header {
     --header-light-color: #FFF;
     height: 100vh;
     position: relative;
-    background-image: url("../img/main_photo_3.jpg");
+    background-image: url("../img/main_photo_3.JPG");
     background-position: bottom;
 }
 
